Clean up local and git tags, remove header for unsorted docs where applicable

--- a/source/_partials/topics/develop.html
+++ b/source/_partials/topics/develop.html
@@ -4,12 +4,49 @@
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
     </div>
     <div class="col-md-6">
-      <h2>Unsorted/Orphan Docs (develop) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">These need some plannings.</p>
-      <ul class="topic-docs">
+      <h2>Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">Create copy that clearly defines guides and why these are featured here.</p>
+      <ul style="list-style:none;padding-left:0px;">
         {% for doc in data.docs_tags.develop if doc.meta.type == "guide"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
+        {% for doc in data.docs_tags.security if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.workflow if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.addons if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.variables if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devterminus if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devwpcli if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devdrush if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.git if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.admin if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.sftpfiles if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.local if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+      </ul>
+      <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">These need some plannings.</p>
+      <ul class="topic-docs">
         {% for doc in data.docs_tags.develop if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -26,9 +63,6 @@
       <h3>Security</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.security if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
         {% for doc in data.docs_tags.security if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -43,9 +77,6 @@
         <h3>Workflows</h3>
         <p class="topic-info__description">Placeholder text about this group of docs.</p>
         <ul class="topic-docs">
-          {% for doc in data.docs_tags.workflow if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
           {% for doc in data.docs_tags.workflow if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
           {% endfor %}
@@ -62,9 +93,6 @@
       <h3>Add On Services</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.addons if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
         {% for doc in data.docs_tags.addons if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -79,9 +107,6 @@
       <h3>Environment Configuration Variables</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.variables if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
         {% for doc in data.docs_tags.variables if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -104,9 +129,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Terminus</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.devterminus if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.devterminus if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -120,9 +142,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>WP-CLI</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.devwpcli if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.devwpcli if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -136,9 +155,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Drush</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.devdrush if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.devdrush if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -151,23 +167,6 @@
           </div>
         </div>
       </div>
-      <div class="subtopic-lists col-md-6">
-        <h3>Unsorted/Orphan Docs (devcli) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h3>
-        <p class="topic-info__description">These need some plannings.</p>
-        <ul class="topic-docs">
-          {% for doc in data.docs_tags.devcli if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.devcli if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.devcli %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-              <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-        </ul>
-      </div>
     </div>
   </div>
   <div class="row">
@@ -177,57 +176,18 @@
         <p class="topic-info__description">Push code changes to the platform using Git mode.</p>
       </div>
       <div class="row">
-        <div class="col-md-12">
-          <div class="subtopic-lists col-md-6">
-            <h4>Remote</h4>
-            <ul class="topic-docs">
-            {% for doc in data.docs_tags.remote if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.remote if doc.meta.type == "video"%}
+        <div class="col-md-12" style="padding:40px;">
+            <ul class="top-docs top-docs-2col">
+            {% for doc in data.docs_tags.git if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
-            {% for doc in data.docs_tags.remote %}
+            {% for doc in data.docs_tags.git %}
             {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
             <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
             {% endif %}
             {% endfor %}
             </ul>
-          </div>
-          <div class="subtopic-lists col-md-6">
-            <h4>Local</h4>
-            <ul class="topic-docs">
-            {% for doc in data.docs_tags.gitlocal if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.gitlocal if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.gitlocal %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
-            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-            {% endfor %}
-            </ul>
-          </div>
         </div>
-      </div>
-      <div class="subtopic-lists col-md-6">
-        <h3>Unsorted/Orphan Docs (git) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h3>
-        <p class="topic-info__description">These need some plannings.</p>
-        <ul class="topic-docs">
-          {% for doc in data.docs_tags.git if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.git if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.git %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-              <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-        </ul>
       </div>
     </div>
   </div>
@@ -242,9 +202,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Using the Admin Interface</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.admin if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.admin if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -258,9 +215,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Managing Files</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.sftpfiles if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.sftpfiles if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -273,23 +227,6 @@
           </div>
         </div>
       </div>
-      <div class="subtopic-lists col-md-6">
-        <h3>Unsorted/Orphan Docs (sftp) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h3>
-        <p class="topic-info__description">These need some plannings.</p>
-        <ul class="topic-docs">
-          {% for doc in data.docs_tags.sftp if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.sftp if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.sftp %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-              <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-        </ul>
-      </div>
     </div>
   </div>
   <div class="row">
@@ -299,57 +236,18 @@
         <p class="topic-info__description">Sync your code, database, and files for local development.</p>
       </div>
       <div class="row">
-        <div class="col-md-12">
-          <div class="subtopic-lists col-md-6">
-            <h4>Kalabox</h4>
-            <ul class="topic-docs">
-            {% for doc in data.docs_tags.kalabox if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.kalabox if doc.meta.type == "video"%}
+          <div class="col-md-12" style="padding:40px;">
+            <ul class="top-docs top-docs-2col">
+            {% for doc in data.docs_tags.local if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
-            {% for doc in data.docs_tags.kalabox %}
+            {% for doc in data.docs_tags.local %}
             {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
             <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
             {% endif %}
             {% endfor %}
             </ul>
           </div>
-          <div class="subtopic-lists col-md-6">
-            <h4>Manual Configuration</h4>
-            <ul class="topic-docs">
-            {% for doc in data.docs_tags.manuallocal if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.manuallocal if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.manuallocal %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
-            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-            {% endfor %}
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="subtopic-lists col-md-6">
-        <h3>Unsorted/Orphan Docs (localdev) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h3>
-        <p class="topic-info__description">These need some plannings.</p>
-        <ul class="topic-docs">
-          {% for doc in data.docs_tags.localdev if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.localdev if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.localdev %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-              <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-        </ul>
       </div>
     </div>
   </div>
