--- a/source/_partials/topics/get-started.html
+++ b/source/_partials/topics/get-started.html
@@ -7,17 +7,29 @@
       <h2>Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
       <p class="topic-info__description">Create copy that clearly defines guides and why these are featured here.</p>
       <ul style="list-style:none;padding-left:0px;">
+        <li><a href="/docs/getting-started"><i class="fa fa-book"></i> Getting Started Training (Placeholder)</a></li>
         {% for doc in data.docs_tags.getstarted if doc.meta.type == "guides"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
-        <li><a href="/docs/getting-started"><i class="fa fa-book"></i> Getting Started Training (Placeholder)</a></li>
-      </ul>
-      <h2>Unsorted/Orphan Docs (getstarted) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">These need some plannings.</p>
-      <ul class="topic-docs">
-        {% for doc in data.docs_tags.getstarted if doc.meta.type == "guide"%}
+        {% for doc in data.docs_tags.create if doc.meta.type == "guide"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
+        {% for doc in data.docs_tags.dashboard if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.migrateguided if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.export if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.migratemanual if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+      </ul>
+      <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">These need some plannings.</p>
+      <ul class="topic-docs">
         {% for doc in data.docs_tags.getstarted if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -34,9 +46,6 @@
       <h3>Create Free Site</h3>
       <p class="topic-info__description">We allocate two free Sandbox sites for all user accounts.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.create if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
         {% for doc in data.docs_tags.create if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -51,9 +60,6 @@
         <h3>Explore the Site Dashboard</h3>
         <p class="topic-info__description">Learn how to work within the Site Dashboard to manage and configure settings.</p>
         <ul class="topic-docs">
-          {% for doc in data.docs_tags.dashboard if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
           {% for doc in data.docs_tags.dashboard if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
           {% endfor %}
@@ -76,9 +82,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Guided Migrations</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.migrateguided if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.migrateguided if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -92,9 +95,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Create Archives for Manual Migration</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.export if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.export if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -108,9 +108,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Manual Migrations</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.migratemanual if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.migratemanual if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -122,25 +119,6 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="subtopic-lists col-md-6">
-        <h3>Unsorted/Orphan Docs (migrate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h3>
-        <p class="topic-info__description">These need some plannings.</p>
-        <ul class="topic-docs">
-          <ul class="topic-docs">
-            {% for doc in data.docs_tags.migrate if doc.meta.type == "guide"%}
-              <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.migrate if doc.meta.type == "video"%}
-              <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.migrate %}
-              {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-                <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-              {% endif %}
-            {% endfor %}
-          </ul>
-        </ul>
       </div>
     </div>
   </div>
