--- a/source/_partials/topics/go-live.html
+++ b/source/_partials/topics/go-live.html
@@ -4,7 +4,32 @@
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
     </div>
     <div class="col-md-6">
-      <h2>Unsorted/Orphan Docs (golive) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <h2>Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">Create copy that clearly defines guides and why these are featured here.</p>
+      <ul style="list-style:none;padding-left:0px;">
+      {% for doc in data.docs_tags.newrelic if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+      {% endfor %}
+      {% for doc in data.docs_tags.status if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+      {% endfor %}
+      {% for doc in data.docs_tags.billing if doc.meta.type == "guide"%}
+      <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+      {% endfor %}
+      {% for doc in data.docs_tags.dns if doc.meta.type == "guide"%}
+      <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+      {% endfor %}
+      {% for doc in data.docs_tags.redirects if doc.meta.type == "guide"%}
+      <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+      {% endfor %}
+      {% for doc in data.docs_tags.domains if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+      {% endfor %}
+      {% for doc in data.docs_tags.domains if doc.meta.type == "video"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+      {% endfor %}
+    </ul>
+      <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
       <p class="topic-info__description">These need some plannings.</p>
       <ul class="topic-docs">
         {% for doc in data.docs_tags.golive if doc.meta.type == "guide"%}
@@ -26,9 +51,6 @@
       <h3>New Relic</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.newrelic if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
         {% for doc in data.docs_tags.newrelic if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -43,9 +65,6 @@
       <h3>Launch-Checks and Site Status Reports</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.status if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
         {% for doc in data.docs_tags.status if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -60,9 +79,6 @@
         <h3>Billing</h3>
         <p class="topic-info__description">Placeholder text about this group of docs.</p>
         <ul class="topic-docs">
-          {% for doc in data.docs_tags.billing if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
           {% for doc in data.docs_tags.billing if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
           {% endfor %}
@@ -85,9 +101,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Configure DNS</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.dns if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.dns if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -101,9 +114,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Handling Redirects</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.redirects if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.redirects if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -115,25 +125,6 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="subtopic-lists col-md-6">
-        <h3>Unsorted/Orphan Docs (domains) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h3>
-        <p class="topic-info__description">These need some plannings.</p>
-        <ul class="topic-docs">
-          <ul class="topic-docs">
-            {% for doc in data.docs_tags.domains if doc.meta.type == "guide"%}
-              <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.domains if doc.meta.type == "video"%}
-              <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.domains %}
-              {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-                <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-              {% endif %}
-            {% endfor %}
-          </ul>
-        </ul>
       </div>
     </div>
   </div>
