--- a/source/_partials/topics/performance.html
+++ b/source/_partials/topics/performance.html
@@ -4,12 +4,34 @@
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
     </div>
     <div class="col-md-6">
-      <h2>Unsorted/Orphan Docs (performance) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">These need some plannings.</p>
-      <ul class="topic-docs">
+      <h2>Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">Create copy that clearly defines guides and why these are featured here.</p>
+      <ul style="list-style:none;padding-left:0px;">
         {% for doc in data.docs_tags.performance if doc.meta.type == "guide"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
+        {% for doc in data.docs_tags.cache if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.cacheapp if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.cacheedge if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.status if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.logs if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.newrelic if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+      </ul>
+      <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">These need some plannings.</p>
+      <ul class="topic-docs">
         {% for doc in data.docs_tags.performance if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -26,9 +48,6 @@
       <h3>New Relic</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.newrelic if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
         {% for doc in data.docs_tags.newrelic if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -43,9 +62,6 @@
       <h3>Log Files</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.logs if doc.meta.type == "guide"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
         {% for doc in data.docs_tags.logs if doc.meta.type == "video"%}
         <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -62,9 +78,6 @@
       <h3>Launch-Checks and Site Status Reports</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.status if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
         {% for doc in data.docs_tags.status if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -87,9 +100,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Edge Layer & CDN's</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.cacheedge if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.cacheedge if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -103,9 +113,6 @@
           <div class="subtopic-lists col-md-6">
             <h4>Application Level Caching</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.cacheapp if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
             {% for doc in data.docs_tags.cacheapp if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
@@ -117,23 +124,6 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="subtopic-lists col-md-6">
-        <h3>Unsorted/Orphan Docs (cache) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h3>
-        <p class="topic-info__description">These need some plannings.</p>
-        <ul class="topic-docs">
-          {% for doc in data.docs_tags.cache if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.cache if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.cache %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-              <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-        </ul>
       </div>
     </div>
   </div>
