--- a/source/_partials/topics/platform.html
+++ b/source/_partials/topics/platform.html
@@ -4,12 +4,25 @@
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
     </div>
     <div class="col-md-6">
-      <h2>Unsorted/Orphan Docs (platform) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">These need some plannings.</p>
-      <ul class="topic-docs">
+      <h2>Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">Create copy that clearly defines guides and why these are featured here.</p>
+      <ul style="list-style:none;padding-left:0px;">
+        {% for doc in data.docs_tags.pantheonyml if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.infrastructure if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.services if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
         {% for doc in data.docs_tags.platform if doc.meta.type == "guide"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
+      </ul>
+      <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">These need some plannings.</p>
+      <ul class="topic-docs">
         {% for doc in data.docs_tags.platform if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -23,12 +36,10 @@
   </div>
   <div class="row">
     <div class="col-md-6 mb-20">
-      <h3>Web Services & Application Resources</h3>
+      <h3>Platform Services & Resources</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.services if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
+
         {% for doc in data.docs_tags.services if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -43,9 +54,7 @@
       <h3>Platform Architecture</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-        {% for doc in data.docs_tags.infrastructure if doc.meta.type == "guide"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
+
         {% for doc in data.docs_tags.infrastructure if doc.meta.type == "video"%}
         <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -66,9 +75,6 @@
       <div class="row">
         <div class="col-md-12" style="padding:40px;">
           <ul class="top-docs top-docs-2col">
-          {% for doc in data.docs_tags.pantheonyml if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
           {% for doc in data.docs_tags.pantheonyml if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
           {% endfor %}
