--- a/source/_partials/topics/manage.html
+++ b/source/_partials/topics/manage.html
@@ -10,69 +10,35 @@
         {% for doc in data.docs_tags.manage if doc.meta.type == "guide"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
-        {% for doc in data.docs_tags.singlesite if doc.meta.type == "guide"%}
+        {% for doc in data.docs_tags.tools if doc.meta.type == "guide"%}
         <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.agencies if doc.meta.type == "guide"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.edu if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
       </ul>
-      <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">These need some plannings.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 mb-20">
+      <h3>Tools for Teams</h3>
+      <p class="topic-info__description">Placeholder text about this group of docs.</p>
+      <ul class="topic-docs">
+        {% for doc in data.docs_tags.tools if doc.meta.type == "video"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.tools %}
+          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
+            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+          {% endif %}
+        {% endfor %}
+      </ul>
+    </div>
+    <div class="col-md-6 mb-20">
+      <h3>Manage Sites & Users</h3>
+      <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
         {% for doc in data.docs_tags.manage if doc.meta.type == "video"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
         {% for doc in data.docs_tags.manage %}
-          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 mb-20">
-      <h3>Edu and Edu+</h3>
-      <p class="topic-info__description">Placeholder text about this group of docs.</p>
-      <ul class="topic-docs">
-        {% for doc in data.docs_tags.edu if doc.meta.type == "video"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.edu %}
-          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
-    <div class="col-md-6 mb-20">
-      <h3>Agencies</h3>
-      <p class="topic-info__description">Placeholder text about this group of docs.</p>
-      <ul class="topic-docs">
-        {% for doc in data.docs_tags.agencies if doc.meta.type == "video"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.agencies %}
-        {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
-        <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-        {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 mb-20">
-      <h3>Single-Site Management</h3>
-      <p class="topic-info__description">Placeholder text about this group of docs.</p>
-      <ul class="topic-docs">
-        {% for doc in data.docs_tags.singlesite if doc.meta.type == "video"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.singlesite %}
         {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
         <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
         {% endif %}
