--- a/source/_views/topic.html
+++ b/source/_views/topic.html
@@ -9,7 +9,7 @@
         <div class="col-md-6 hero-video__video" style="margin-bottom:20px;">
           <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
         </div>
-        <a class="topic-info-link" style="display:block!important;" href="/docs/getting-started">
+        <a class="topic-info-link" style="display:block!important;" href="/docs/guides/getting-started">
         <div class="col-md-6 hero-video__text" style="padding:0px!important;">
           <div class="guide-cta-landing" style="padding:25px!important;">
             <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
