--- a/source/_partials/topics/get-started.html
+++ b/source/_partials/topics/get-started.html
@@ -4,34 +4,14 @@
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
     </div>
     <div class="col-md-6">
-      <h2>Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">Create copy that clearly defines guides and why these are featured here.</p>
-      <ul style="list-style:none;padding-left:0px;">
-        <li><a href="/docs/getting-started"><i class="fa fa-book"></i> Getting Started Training (Placeholder)</a></li>
-        {% for doc in data.docs_tags.getstarted if doc.meta.type == "guides"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.create if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.dashboard if doc.meta.type == "guide"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.migrateguided if doc.meta.type == "guide"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.export if doc.meta.type == "guide"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.migratemanual if doc.meta.type == "guide"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-      </ul>
       <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
       <p class="topic-info__description">These need some plannings.</p>
       <ul class="topic-docs">
         {% for doc in data.docs_tags.getstarted if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.getstarted if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
         {% for doc in data.docs_tags.getstarted %}
           {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
@@ -49,6 +29,9 @@
         {% for doc in data.docs_tags.create if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
+        {% for doc in data.docs_tags.create if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
         {% for doc in data.docs_tags.create %}
           {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
             <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
@@ -61,7 +44,10 @@
         <p class="topic-info__description">Learn how to work within the Site Dashboard to manage and configure settings.</p>
         <ul class="topic-docs">
           {% for doc in data.docs_tags.dashboard if doc.meta.type == "video"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+          {% endfor %}
+          {% for doc in data.docs_tags.dashboard if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
           {% endfor %}
           {% for doc in data.docs_tags.dashboard %}
           {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
@@ -83,7 +69,10 @@
             <h4>Guided Migrations</h4>
             <ul class="topic-docs">
             {% for doc in data.docs_tags.migrateguided if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+              <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+            {% endfor %}
+            {% for doc in data.docs_tags.migrateguided if doc.meta.type == "guide"%}
+            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
             {% endfor %}
             {% for doc in data.docs_tags.migrateguided %}
             {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
@@ -96,7 +85,10 @@
             <h4>Create Archives for Manual Migration</h4>
             <ul class="topic-docs">
             {% for doc in data.docs_tags.export if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+              <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+            {% endfor %}
+            {% for doc in data.docs_tags.export if doc.meta.type == "guide"%}
+            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
             {% endfor %}
             {% for doc in data.docs_tags.export %}
             {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
@@ -109,7 +101,10 @@
             <h4>Manual Migrations</h4>
             <ul class="topic-docs">
             {% for doc in data.docs_tags.migratemanual if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+              <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+            {% endfor %}
+            {% for doc in data.docs_tags.migratemanual if doc.meta.type == "guide"%}
+            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
             {% endfor %}
             {% for doc in data.docs_tags.migratemanual %}
             {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
