--- a/source/_partials/topics/manage.html
+++ b/source/_partials/topics/manage.html
@@ -3,18 +3,6 @@
     <div class="col-md-6 mb-20" style="margin-top:20px;">
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
     </div>
-    <div class="col-md-6">
-      <h2>Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">Create copy that clearly defines guides and why these are featured here.</p>
-      <ul style="list-style:none;padding-left:0px;">
-        {% for doc in data.docs_tags.manage if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.tools if doc.meta.type == "guide"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </div>
   </div>
   <div class="row">
     <div class="col-md-6 mb-20">
@@ -23,6 +11,9 @@
       <ul class="topic-docs">
         {% for doc in data.docs_tags.tools if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.tools if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
         {% for doc in data.docs_tags.tools %}
           {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
@@ -36,7 +27,10 @@
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
         {% for doc in data.docs_tags.manage if doc.meta.type == "video"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.manage if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
         {% for doc in data.docs_tags.manage %}
         {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
@@ -44,6 +38,23 @@
         {% endif %}
         {% endfor %}
       </ul>
+    </div>
+    <div class="col-md-6 mb-20">
+        <h3>Billing</h3>
+        <p class="topic-info__description">Placeholder text about this group of docs.</p>
+        <ul class="topic-docs">
+          {% for doc in data.docs_tags.billing if doc.meta.type == "video"%}
+            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+          {% endfor %}
+          {% for doc in data.docs_tags.billing if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+          {% endfor %}
+          {% for doc in data.docs_tags.billing %}
+          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+          <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+          {% endif %}
+          {% endfor %}
+        </ul>
     </div>
   </div>
 </div>
