--- a/source/_partials/topics/troubleshoot.html
+++ b/source/_partials/topics/troubleshoot.html
@@ -13,9 +13,11 @@
       <h3>Code</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-
         {% for doc in data.docs_tags.debugcode if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.debugcode if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
         {% for doc in data.docs_tags.debugcode %}
           {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
@@ -28,9 +30,11 @@
       <h3>Database</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-
         {% for doc in data.docs_tags.debugdb if doc.meta.type == "video"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.debugdb if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
         {% for doc in data.docs_tags.debugdb %}
         {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
@@ -45,9 +49,11 @@
       <h3>Filesystem</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
-
         {% for doc in data.docs_tags.debugfiles if doc.meta.type == "video"%}
-        <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.debugfiles if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
         {% for doc in data.docs_tags.debugfiles %}
         {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
