Design pass on new landing pages

--- a/source/_partials/topics/manage.html
+++ b/source/_partials/topics/manage.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Tools for Teams</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
@@ -22,7 +22,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Manage Sites & Users</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
@@ -39,7 +39,9 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="col-md-6 mb-20">
+  </div>
+  <div class="row">
+    <div class="col-md-6 topic-groups">
         <h3>Billing</h3>
         <p class="topic-info__description">Placeholder text about this group of docs.</p>
         <ul class="topic-docs">
