--- a/source/_partials/topics/automate.html
+++ b/source/_partials/topics/automate.html
@@ -1,11 +1,28 @@
 <div class="col-md-12">
   <div class="row">
-    <div class="col-md-6 mb-70" style="margin-top:20px;">
+    <div class="col-md-6 mb-20" style="margin-top:20px;">
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+    </div>
+    <div class="col-md-6 topic-groups">
+      <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">These need some plannings.</p>
+      <ul class="topic-docs">
+        {% for doc in data.docs_tags.develop if doc.meta.type == "video"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.develop if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.develop %}
+          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
+            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+          {% endif %}
+        {% endfor %}
+      </ul>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12 mb-20">
+    <div class="col-md-12 topic-groups">
       <ul class="top-docs top-docs-2col">
         {% for doc in data.docs_tags.siteintegrations if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
@@ -68,15 +85,15 @@
           </ul>
         </div>
         <div class="subtopic-lists col-md-6">
-          <h4>WP-CLI</h4>
+          <h4>Drush</h4>
           <ul class="topic-docs">
-          {% for doc in data.docs_tags.devwpcli if doc.meta.type == "video"%}
+          {% for doc in data.docs_tags.devdrush if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
           {% endfor %}
-          {% for doc in data.docs_tags.devwpcli if doc.meta.type == "guide"%}
+          {% for doc in data.docs_tags.devdrush if doc.meta.type == "guide"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
           {% endfor %}
-          {% for doc in data.docs_tags.devwpcli %}
+          {% for doc in data.docs_tags.devdrush %}
           {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
           <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
           {% endif %}
@@ -88,15 +105,15 @@
     <div class="row">
       <div class="col-md-12">
         <div class="subtopic-lists col-md-6">
-          <h4>Drush</h4>
+          <h4>WP-CLI</h4>
           <ul class="topic-docs">
-          {% for doc in data.docs_tags.devdrush if doc.meta.type == "video"%}
+          {% for doc in data.docs_tags.devwpcli if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
           {% endfor %}
-          {% for doc in data.docs_tags.devdrush if doc.meta.type == "guide"%}
+          {% for doc in data.docs_tags.devwpcli if doc.meta.type == "guide"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
           {% endfor %}
-          {% for doc in data.docs_tags.devdrush %}
+          {% for doc in data.docs_tags.devwpcli %}
           {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
           <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
           {% endif %}
