--- a/source/_partials/topics/develop.html
+++ b/source/_partials/topics/develop.html
@@ -3,7 +3,7 @@
     <div class="col-md-6 mb-20" style="margin-top:20px;">
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 topic-groups">
       <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
       <p class="topic-info__description">These need some plannings.</p>
       <ul class="topic-docs">
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Security</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
@@ -39,7 +39,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
         <h3>Workflows</h3>
         <p class="topic-info__description">Placeholder text about this group of docs.</p>
         <ul class="topic-docs">
@@ -58,7 +58,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Add On Services</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
@@ -75,7 +75,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Environment Configuration Variables</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
@@ -118,22 +118,6 @@
             </ul>
           </div>
           <div class="subtopic-lists col-md-6">
-            <h4>WP-CLI</h4>
-            <ul class="topic-docs">
-            {% for doc in data.docs_tags.devwpcli if doc.meta.type == "video"%}
-              <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.devwpcli if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.devwpcli %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
-            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-            {% endfor %}
-            </ul>
-          </div>
-          <div class="subtopic-lists col-md-6">
             <h4>Drush</h4>
             <ul class="topic-docs">
             {% for doc in data.docs_tags.devdrush if doc.meta.type == "video"%}
@@ -143,6 +127,26 @@
             <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
             {% endfor %}
             {% for doc in data.docs_tags.devdrush %}
+            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+            {% endif %}
+            {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="subtopic-lists col-md-6">
+            <h4>WP-CLI</h4>
+            <ul class="topic-docs">
+            {% for doc in data.docs_tags.devwpcli if doc.meta.type == "video"%}
+              <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+            {% endfor %}
+            {% for doc in data.docs_tags.devwpcli if doc.meta.type == "guide"%}
+            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+            {% endfor %}
+            {% for doc in data.docs_tags.devwpcli %}
             {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
             <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
             {% endif %}
