--- a/source/_partials/topics/get-started.html
+++ b/source/_partials/topics/get-started.html
@@ -1,28 +1,23 @@
 <div class="col-md-12">
   <div class="row">
-    <div class="col-md-6 mb-20" style="margin-top:20px;">
-      <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
-    </div>
-    <div class="col-md-6">
-      <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">These need some plannings.</p>
-      <ul class="topic-docs">
-        {% for doc in data.docs_tags.getstarted if doc.meta.type == "video"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.getstarted if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
-        {% for doc in data.docs_tags.getstarted %}
-          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-          {% endif %}
-        {% endfor %}
-      </ul>
+    <div class="col-md-12 mb-70">
+      <div class="hero-video clearfix" style="background-image:none!important;border:none!important;">
+        <div class="col-md-6 hero-video__video">
+          <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+        </div>
+        <div class="col-md-6 hero-video__text" style="padding:25px!important;">
+          <div class="guide-cta-landing" style="padding:25px!important;">
+            <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+            <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</a><br>
+              <br><a href="/docs/getting-started" class="cta cta-yellow">More</a>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Create Free Site</h3>
       <p class="topic-info__description">We allocate two free Sandbox sites for all user accounts.</p>
       <ul class="topic-docs">
@@ -39,7 +34,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
         <h3>Explore the Site Dashboard</h3>
         <p class="topic-info__description">Learn how to work within the Site Dashboard to manage and configure settings.</p>
         <ul class="topic-docs">
@@ -97,24 +92,28 @@
             {% endfor %}
             </ul>
           </div>
-          <div class="subtopic-lists col-md-6">
-            <h4>Manual Migrations</h4>
-            <ul class="topic-docs">
-            {% for doc in data.docs_tags.migratemanual if doc.meta.type == "video"%}
-              <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.migratemanual if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.migratemanual %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
-            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-            {% endfor %}
-            </ul>
+        </div>
+      </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="subtopic-lists col-md-6">
+              <h4>Manual Migrations</h4>
+              <ul class="topic-docs">
+              {% for doc in data.docs_tags.migratemanual if doc.meta.type == "video"%}
+                <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+              {% endfor %}
+              {% for doc in data.docs_tags.migratemanual if doc.meta.type == "guide"%}
+              <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+              {% endfor %}
+              {% for doc in data.docs_tags.migratemanual %}
+              {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+              <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+              {% endif %}
+              {% endfor %}
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
