--- a/source/_partials/topics/performance.html
+++ b/source/_partials/topics/performance.html
@@ -3,7 +3,7 @@
     <div class="col-md-6 mb-20" style="margin-top:20px;">
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 topic-groups">
       <h2>Blockers (Delete/Consolidate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
       <p class="topic-info__description">These need some plannings.</p>
       <ul class="topic-docs">
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>New Relic</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
@@ -39,7 +39,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Log Files</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
@@ -58,7 +58,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Launch-Checks and Site Status Reports</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
