--- a/source/_partials/topics/troubleshoot.html
+++ b/source/_partials/topics/troubleshoot.html
@@ -1,15 +1,23 @@
 <div class="col-md-12">
   <div class="row">
-    <div class="col-md-6 mb-20" style="margin-top:20px;">
-      <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
-    </div>
-    <div class="col-md-6">
-      <h2>CTA For Office Hours <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">These need some plannings.</p>
+    <div class="col-md-12 mb-70">
+      <div class="hero-video clearfix" style="background-image:none!important;border:none!important;">
+        <div class="col-md-6 hero-video__video">
+          <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+        </div>
+        <div class="col-md-6 hero-video__text" style="padding:25px!important;">
+          <div class="guide-cta-landing" style="padding:25px!important;">
+            <h1 class="hero-video__guide-cta-title">Office Hours <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+            <p class="hero-video__guide-cta-subtitle">Got questions? We have answers! Our Agency and Community Success team holds office hours every Wednesday and Thursday.</a><br>
+              <br><a href="https://pantheon.io/agencies/office-hours" class="cta cta-yellow">More</a>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Code</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
@@ -26,7 +34,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Database</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
@@ -45,7 +53,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 mb-20">
+    <div class="col-md-6 topic-groups">
       <h3>Filesystem</h3>
       <p class="topic-info__description">Placeholder text about this group of docs.</p>
       <ul class="topic-docs">
