Ready for launch, remove cta from home page, restore getting-started doc until guide is released

--- a/source/_partials/topics/automate.html
+++ b/source/_partials/topics/automate.html
@@ -15,10 +15,11 @@
       </ul>
     </div>
   </div>
-  <div class="col-md-12 subtopic-container mb-70">
+  <div style="padding:15px;" class="row mb-20">
+    <div class="col-md-12 subtopic-container">
     <div class="subtopic-groups">
       <h3>The pantheon.yml Configuration File</h3>
-      <p class="topic-info__description">Placeholder text about this group of docs.</p>
+      <p class="topic-info__description">Automate your Pantheon workflows using platform hooks and manage advanced site configurations in YAML.</p>
     </div>
     <div class="row">
       <div class="col-md-12" style="padding:40px;">
@@ -38,7 +39,9 @@
       </div>
     </div>
   </div>
-  <div class="col-md-12 subtopic-container mb-70">
+</div>
+<div style="padding:15px;" class="row mb-20">
+  <div class="col-md-12 subtopic-container">
     <div class="subtopic-groups">
       <h3>Command Line Inerface</h3>
       <p class="topic-info__description">Use Terminus to interact with the platform from the command line.</p>
@@ -100,4 +103,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
