--- a/source/docs.html
+++ b/source/docs.html
@@ -18,7 +18,7 @@ ul.pio-breadcrumb {
 
 
 <h1 class="title">Documentation Topics</h1>
-<div class="row mb-20">
+<!--div class="row mb-20">
   <div class="col-md-12">
     <a class="topic-info-link" style="display:block!important;" href="/docs/guides/getting-started">
     <div class="guide-cta-landing" style="padding:25px!important;">
@@ -27,7 +27,7 @@ ul.pio-breadcrumb {
     </div>
     </a>
   </div>
-</div>
+</div-->
 
 <div class="mb-70">
   <div class="row row-topics-list row-topics-list-main">
