--- a/source/_partials/topics/troubleshoot.html
+++ b/source/_partials/topics/troubleshoot.html
@@ -1,7 +1,7 @@
   <div class="row">
     <div class="col-md-6 topic-groups">
       <h3>Code</h3>
-      <p class="topic-info__description">Placeholder text about this group of docs.</p>
+      <p class="topic-info__description">Learn how to handle PHP errors, notices, warnings, and exceptions.</p>
       <ul class="topic-docs">
         {% for doc in data.docs_tags.debugcode if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
@@ -18,7 +18,7 @@
     </div>
     <div class="col-md-6 topic-groups">
       <h3>Database</h3>
-      <p class="topic-info__description">Placeholder text about this group of docs.</p>
+      <p class="topic-info__description">Expose issues and fix connection issues with the database.</p>
       <ul class="topic-docs">
         {% for doc in data.docs_tags.debugdb if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
@@ -34,10 +34,10 @@
       </ul>
     </div>
   </div>
-  <div class="row">
+  <div class="row mb-70">
     <div class="col-md-6 topic-groups">
       <h3>Filesystem</h3>
-      <p class="topic-info__description">Placeholder text about this group of docs.</p>
+      <p class="topic-info__description">Debug issues with write access and unexpected permissions.</p>
       <ul class="topic-docs">
         {% for doc in data.docs_tags.debugfiles if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
