Copy edits and responsive table

--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -98,7 +98,7 @@
       <div class="alert devbar alert-dismissible" role="alert">
          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
          <h3 class="devbar">Early Access Doc</h3>
-         <p class="devbar">The documentation on this page discusses features and options that are not available across the entire platform. Early access to Free HTTPS is currently invite only.<p>
+         <p class="devbar">The documentation on this page discusses features and options that are not available across the entire platform. Early access to Free and Automated HTTPS is currently invite only.<p>
        </div>
       {% endif %}
       {% if page.home is not defined %}
